--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,6 +9,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  flutter_rating_bar: ^4.0.1
+  google_fonts: ^6.2.1
 
 dev_dependencies:
   flutter_test:
